增加 docker 配置